<?xml version="1.0"?>
<package>
  <name>ros_qt_controller</name>
  <version>0.0.1</version>
  <description>Ebgineer robot controller.</description>
  <license>BSD</license>
  <maintainer email="zaufar@gmail.com">Aufar Zakiev</maintainer>
  <author email="zaufar@gmail.com">Aufar Zakiev</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
</package>